feat: Add debug prints for model_features in API and workflow
This commit adds debug print statements to api/main.py to verify the content
of model_features after loading. It also adds a step to the GitHub Actions
workflow to print the content of ml/model_features.json to aid in debugging
why known_med_categories is empty in the pipeline.

--- a/.github/workflows/emar_risk_engine.yml
+++ b/.github/workflows/emar_risk_engine.yml
@@ -26,6 +26,9 @@ jobs:
     - name: Lint with ruff
       run: ruff check .
 
+    - name: Debug model_features.json
+      run: cat ml/model_features.json
+
     - name: Run tests
       run: python -m pytest
 
