--- a/.github/workflows/emar_risk_engine.yml
+++ b/.github/workflows/emar_risk_engine.yml
@@ -26,14 +26,14 @@ jobs:
     - name: Lint with ruff
       run: ruff check .
 
-    - name: Debug model_features.json
-      run: cat ml/model_features.json
+    - name: Train model
+      run: python ml/trainer.py
+
+    - name: List ml directory contents
+      run: ls -l ml/
 
     - name: Run tests
       run: python -m pytest
-
-    - name: Train model
-      run: python ml/trainer.py
 
     - name: Upload model artifact
       uses: actions/upload-artifact@v4
