feat: Implement RAG chatbot and update CI/CD pipeline
This commit introduces a RAG (Retrieval-Augmented Generation) chatbot to the SmartRxHub-Insights project.

Key changes include:
- **Chatbot Integration:** Added `chatbot/bot.py` for chatbot logic, integrated with FastAPI via a new `/chat` endpoint in `api/main.py`.
- **Data Ingestion:** Modified `api/main.py` to persist simulated eMAR data into the PostgreSQL database.
- **Embeddings Generation:** Added `scripts/generate_embeddings.py` to create and store embeddings of eMAR data in the `KnowledgeBase` table.
- **CI/CD Pipeline Update:** Updated `.github/workflows/emar_risk_engine.yml` to include Docker setup, database initialization, data simulation, and embedding generation steps.
- **Chatbot Testing:** Added `tests/test_chatbot.py` with mocked Gemini API calls to ensure reliable and quota-friendly testing of the chatbot functionality.
- **Dependency Management:** Ensured `python-dotenv` is correctly used for environment variable loading.
- **Model Update:** Switched to `models/gemini-1.5-flash-latest` for the chatbot to avoid quota issues with `gemini-1.5-pro-latest`.

This significantly enhances the project's capabilities by providing an interactive way to query patient data.

--- a/requirements.txt
+++ b/requirements.txt
@@ -10,3 +10,10 @@ pytest
 httpx
 sqlalchemy
 psycopg2-binary
+
+# Dependencies for Chatbot
+google-generativeai
+sentence-transformers
+pgvector
+python-dotenv
+langchain
