--- a/.github/workflows/emar_risk_engine.yml
+++ b/.github/workflows/emar_risk_engine.yml
@@ -15,16 +15,53 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
-        python-version: '3.10'
+        python-version: '3.11' # Use Python 3.11 for broader compatibility
 
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-        pip install scikit-learn==1.3.2
 
     - name: Lint with ruff
       run: ruff check .
+
+    - name: Set up Docker Compose
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y docker-compose
+
+    - name: Start Docker services
+      run: docker-compose up -d
+
+    - name: Wait for database to be ready
+      run: |
+        # Wait for PostgreSQL to be ready (adjust timeout as needed)
+        for i in $(seq 1 10); do
+          docker exec smartrxhub-insights-db-1 pg_isready -h localhost -p 5432 -U heet09 && break
+          echo "Waiting for database..."
+          sleep 5
+        done
+
+    - name: Initialize database
+      run: python init_db.py
+
+    - name: Start FastAPI application
+      run: uvicorn api.main:app --host 0.0.0.0 --port 8000 &
+
+    - name: Wait for FastAPI to be ready
+      run: |
+        # Wait for FastAPI to be ready (adjust timeout as needed)
+        for i in $(seq 1 10); do
+          curl -s http://localhost:8000/ && break
+          echo "Waiting for FastAPI..."
+          sleep 5
+        done
+
+    - name: Simulate data and generate embeddings
+      run: |
+        python scripts/data_simulator.py &
+        sleep 30 # Give simulator some time to send data
+        python scripts/generate_embeddings.py
 
     - name: Train model
       run: python ml/trainer.py
