refactor(ci): Replace docker-compose with docker run for PostgreSQL in CI
This commit refactors the CI/CD pipeline to directly start the PostgreSQL container using `docker run` instead of `docker-compose`. This change allows for more granular control over the database service within the GitHub Actions workflow.

--- a/.github/workflows/emar_risk_engine.yml
+++ b/.github/workflows/emar_risk_engine.yml
@@ -25,13 +25,15 @@ jobs:
     - name: Lint with ruff
       run: ruff check .
 
-    - name: Set up Docker Compose
+    - name: Start PostgreSQL Container
       run: |
-        sudo apt-get update
-        sudo apt-get install -y docker-compose
-
-    - name: Start Docker services
-      run: docker-compose up -d
+        docker run -d \
+          --name pgvector_db \
+          -e POSTGRES_USER=heet09 \
+          -e POSTGRES_PASSWORD=heet123 \
+          -e POSTGRES_DB=smartrxhub \
+          -p 5432:5432 \
+          pgvector/pgvector:pg13
 
     - name: Wait for database to be ready
       run: |
