--- a/.github/workflows/emar_risk_engine.yml
+++ b/.github/workflows/emar_risk_engine.yml
@@ -21,6 +21,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+        pip install pytest-asyncio
 
     - name: Lint with ruff
       run: ruff check .
@@ -39,9 +40,8 @@ jobs:
       run: |
         # Wait for PostgreSQL to be ready (adjust timeout as needed)
         for i in $(seq 1 10); do
-          docker exec smartrxhub-insights-db-1 pg_isready -h localhost -p 5432 -U heet09 && break
+          docker exec pgvector_db pg_isready -h localhost -p 5432 -U heet09 && break
           echo "Waiting for database..."
-          sleep 5
         done
 
     - name: Initialize database
