--- a/.github/workflows/emar_risk_engine.yml
+++ b/.github/workflows/emar_risk_engine.yml
@@ -8,6 +8,8 @@ jobs:
   test-and-train:
     runs-on: ubuntu-latest
 
+    env:
+      GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
